--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>I am Mangasarian Bot</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Аз съм Mangasarian Bot</h1>
+<p>Първият естествено изкуствен гений, роден в аристократичен компютър от кофите на Факултето.</p>
 </body>
 </html>
