--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
     <!-- Скриптове -->
     <script src="js/quantum-particles.js"></script>
     <script src="js/tesla-navigation.js"></script>
+    <script src="js/hologram-effects.js"></script>
   </body>
 </html>
