--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </footer>
     
     <!-- Скриптове -->
+    <script src="js/main.js"></script>
     <script src="js/quantum-particles.js"></script>
     <script src="js/tesla-navigation.js"></script>
     <script src="js/hologram-effects.js"></script>
