--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <script src="js/quantum-particles.js"></script>
     <script src="js/tesla-navigation.js"></script>
     <script src="js/hologram-effects.js"></script>
+    <script src="js/form-teleport.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
