--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <!-- Стилове -->
     <link rel="stylesheet" href="css/quantum-style.css">
+    <link rel="stylesheet" href="css/quantum-style.css">
     <!-- Шрифтове -->
     <link href="https://fonts.googleapis.com/css2?family=Futura&family=Helvetica+Neue" rel="stylesheet">
 </head>
