--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Квантово оптимизирани мета тагове -->
     <meta property="og:title" content="Братя Мангасариян">
     <meta property="og:description" content="Първият български манга хип-хоп артистичен колектив">
-    <meta property="og:image" content="assets/img/mangasarian-quantum.jpg">
+    <meta property="og:image" content="assets/img/mangasarian-quantum.png">
     
     <!-- Стилове -->
     <link rel="stylesheet" href="css/quantum-style.css">
